--- a/citybike-client/package.json
+++ b/citybike-client/package.json
@@ -8,8 +8,8 @@
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
     "react-leaflet": "^2.1.2",
-    "react-scripts": "2.1.1",
-    "socket.io-client": "^2.1.1"
+    "react-scripts": "^4.0.3",
+    "socket.io-client": "^4.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
